--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "gymnasium[mujoco]>=1.1.1",
+    "gymnasium[mujoco,other]>=1.1.1",
     "ipython>=8.35.0",
     "tensorboard>=2.19.0",
     "torch>=2.6.0",
